--- a/.github/workflows/build-debs.yml
+++ b/.github/workflows/build-debs.yml
@@ -85,6 +85,20 @@ jobs:
           echo "Dir ${PWD}/artifacts"
           ls -al "${PWD}/artifacts"
 
+      - uses: aws-actions/configure-aws-credentials@v1
+        name: Configure AWS credentials
+        with:
+          aws-access-key-id: ${{ secrets.AWS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: us-east-1
+          # role-session-name: GithubAction
+          role-duration-seconds: 1800
+
+      - name: Copy files to S3 with the AWS CLI
+        run: |
+          aws s3 sync "${PWD}/artifacts" s3://${{ secrets.AWS_BUCKET }}
+
 
   build_x64:
     if: ${{ github.ref == 'refs/heads/master' }}
